--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,3 +3,10 @@
   margin: 0;
   padding: 0;
 }
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+}
