feat: add AppRouter and pages

--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -3,4 +3,56 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
+  background-color: #f7f7f7;
+}
+
+.headerContent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 25px 0;
+}
+
+.logo {
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  line-height: 120%;
+  font-weight: 900;
+  color: #1e1e1e;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 8px;
+  margin-top: -5px;
+  white-space: nowrap;
+  span {
+    font-size: 44px;
+    color: #f48840;
+  }
+}
+
+.navigation {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  column-gap: 30px;
+}
+
+.navLink {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #1e1e1e;
+  font-size: 15px;
+  font-weight: 800;
+  letter-spacing: 0.5px;
+  padding: 8px;
+  transition: all .3s linear;
+  &:hover {
+    color: #f48840;
+  }
+}
+
+.navLinkActive {
+  color: #f48840;
 }
