--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -39,7 +39,25 @@
   column-gap: 30px;
 }
 
+.burger {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 56px;
+  height: 46px;
+  background-color: #f48840;
+  cursor: pointer;
+  @media screen and (min-width: 992px) {
+    display: none;
+  }
+}
+
+.burger img {
+  width: 16px;
+}
+
 .navLink {
+  display: none;
   text-decoration: none;
   text-transform: uppercase;
   color: #1e1e1e;
@@ -51,8 +69,58 @@
   &:hover {
     color: #f48840;
   }
+  @media screen and (min-width: 992px) {
+    display: inline;
+  }
 }
 
 .navLinkActive {
+  color: #f48840;
+}
+
+.burgerMenu {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 96px;
+  width: 100%;
+  max-height: 0;
+  z-index: 999;
+  overflow: hidden;
+  background-color: #fff;
+  transition: max-height .3s ease-in;
+  @media screen and (min-width: 992px) {
+    display: none;
+  }
+  &.show {
+    max-height: 275px;
+  }
+}
+
+.burgerItem {
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid #eee;
+  margin: 0 15px;
+}
+
+.burgerLink {
+  display: inline-flex;
+  justify-content: center;
+  width: 100%;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #1e1e1e;
+  font-size: 15px;
+  font-weight: 800;
+  letter-spacing: 0.5px;
+  padding: 15px 0;
+  transition: all .3s linear;
+  &:hover {
+    color: #f48840;
+  }
+}
+
+.burgerLinkActive {
   color: #f48840;
 }
