--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -17,7 +17,7 @@
 .logo {
   font-family: 'Roboto', sans-serif;
   font-size: 24px;
-  line-height: 120%;
+  line-height: 32px;
   font-weight: 900;
   color: #1e1e1e;
   text-decoration: none;
@@ -82,13 +82,17 @@
   display: block;
   position: absolute;
   left: 0;
-  top: 96px;
+  top: 100px;
   width: 100%;
   max-height: 0;
   z-index: 999;
   overflow: hidden;
   background-color: #fff;
   transition: max-height .3s ease-in;
+  & ul {
+    list-style: none;
+    box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+  }
   @media screen and (min-width: 992px) {
     display: none;
   }
@@ -101,7 +105,6 @@
   display: flex;
   justify-content: center;
   border-bottom: 1px solid #eee;
-  margin: 0 15px;
 }
 
 .burgerLink {
