--- a/src/layout/Footer/Footer.module.scss
+++ b/src/layout/Footer/Footer.module.scss
@@ -1,4 +1,103 @@
 .footer {
   display: flex;
   margin-top: auto;
+  background-color: #20232e;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  line-height: 21px;
+  padding: 20px 0;
+  @media screen and (min-width: 640px) {
+    padding: 30px 0;
+  }
+  @media screen and (min-width: 992px) {
+    padding: 60px 0;
+  }
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.socials {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-weight: 500;
+  width: 100%;
+  border-bottom: 1px solid rgba(250,250,250,0.15);
+  padding: 0 15px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 640px) {
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 992px) {
+    padding-bottom: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+.socialList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+  width: 100%;
+  list-style: none;
+  @media screen and (min-width: 640px) {
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 30px;
+  }
+}
+
+.socialItem {
+  &::after {
+    display: none;
+    content: "|";
+    color: #fff;
+    margin-left: 30px;
+    @media screen and (min-width: 640px) {
+      display: inline;
+    }
+  }
+  &:last-child::after {
+    display: none;
+  }
+}
+
+.socialItem a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  transition: all .3s linear;
+  &:hover {
+    color: #f48840;
+  }
+}
+
+.copyright {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0 15px;
+  flex-wrap: wrap;
+  text-transform: uppercase;
+  font-size: 13px;
+  line-height: 30px;
+  font-weight: 400;
+}
+
+.copyright a {
+  text-decoration: none;
+  color: #f48840;
+  font-weight: 500;
+  transition: all .15s ease-in-out;
+  &:hover {
+    text-decoration: underline;
+  }
 }
