--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -90,6 +90,7 @@
   background-color: #fff;
   transition: max-height .3s ease-in;
   & ul {
+    margin: 15px 0;
     list-style: none;
     box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
   }
@@ -97,7 +98,7 @@
     display: none;
   }
   &.show {
-    max-height: 275px;
+    max-height: 305px;
   }
 }
 
