feat: add viewPosts button; add sidebar

--- a/src/components/HomeContent/HomeContent.module.scss
+++ b/src/components/HomeContent/HomeContent.module.scss
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: row;
   padding: 100px 0;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .mainColumn {
@@ -15,9 +17,42 @@
   padding: 0 15px;
 }
 
+.viewPostsBtn {
+  display: inline-flex;
+  justify-content: center;
+  border: none;
+  background-color: #f48840;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+  line-height: 60px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  transition: background .3s linear;
+  &:hover {
+    background-color: #fb9857;
+  }
+}
+
 .sideColumn {
   display: flex;
   flex-direction: column;
   width: calc(100% / 3);
   padding: 0 15px;
 }
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  width: 100%;
+}
+
+.sidebarSearch {}
+
+.sidebarItem {}
+
+.sidebarHeading {}
+
+.sidebarContent {}
