--- a/src/components/HomeContent/HomeContent.module.scss
+++ b/src/components/HomeContent/HomeContent.module.scss
@@ -13,7 +13,6 @@
 .mainColumn {
   display: flex;
   flex-direction: column;
-  width: calc(100% / 3 * 2);
   padding: 0 15px;
 }
 
@@ -38,21 +37,145 @@
 .sideColumn {
   display: flex;
   flex-direction: column;
-  width: calc(100% / 3);
+  width: 380px;
+  min-width: 380px;
   padding: 0 15px;
 }
 
 .sidebar {
   display: flex;
   flex-direction: column;
+  row-gap: 50px;
   margin-left: 30px;
+}
+
+.sidebarSearch {
+  display: flex;
+  input {
+    display: inline-flex;
+    width: 100%;
+    border: 1px solid #eee;
+    padding: 17px 15px 16px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 13px;
+    font-weight: 500;
+    color: #7a7a7a;
+    &:focus {
+      outline: none;
+    }
+    &::placeholder {
+      text-transform: uppercase;
+      color: #aaa;
+    }
+  }
+}
+
+.sidebarItem {
+  display: block;
   width: 100%;
 }
 
-.sidebarSearch {}
+.sidebarHeading {
+  padding-bottom: 15px;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #eee;
+  h3 {
+    font-size: 18px;
+    font-weight: 900;
+    line-height: 120%;
+    color: #20232e;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+  }
+}
 
-.sidebarItem {}
+.sidebarContent {
+  display: block;
+  width: 100%;
+}
 
-.sidebarHeading {}
+.sidebarPostList {
+  list-style-type: none;
+}
 
-.sidebarContent {}
+.sidebarPostItem {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #eee;
+  cursor: pointer;
+  &:last-child {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    border-bottom: none;
+  }
+}
+
+.postHeading {
+  font-size: 19px;
+  font-weight: 900;
+  line-height: 30px;
+  color: #20232e;
+  margin-bottom: 8px;
+  transition: all .2s linear;
+  &:hover {
+    color: #f48840;
+  }
+}
+
+.postDate {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #aaa;
+}
+
+.sidebarCategoryList {
+  list-style-type: none;
+}
+
+.sidebarCategoryItem {
+  margin-bottom: 15px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 24px;
+  a {
+    text-decoration: none;
+    color: #20232e;
+    transition: all .2s ease-in;
+    &:hover {
+      color: #f48840;
+    }
+  }
+}
+
+.sidebarTagList {
+  list-style-type: none;
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+.sidebarTagItem {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.sidebarTagBtn {
+  line-height: 150%;
+  background-color: #fff;
+  border: 1px solid #eee;
+  padding: 10px 18px;
+  color: #aaa;
+  transition: all .3s ease-in;
+  cursor: pointer;
+  &:hover {
+    background-color: #f48840;
+    border-color: #f48840;
+    color: #fff;
+  }
+}
