--- a/src/components/HomeContent/HomeContent.module.scss
+++ b/src/components/HomeContent/HomeContent.module.scss
@@ -4,10 +4,14 @@
 
 .content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  row-gap: 120px;
   padding: 100px 0;
   margin-left: -15px;
   margin-right: -15px;
+  @media screen and (min-width: 992px) {
+    flex-direction: row;
+  }
 }
 
 .mainColumn {
@@ -37,16 +41,20 @@
 .sideColumn {
   display: flex;
   flex-direction: column;
-  width: 380px;
-  min-width: 380px;
   padding: 0 15px;
+  @media screen and (min-width: 640px) {
+    width: 380px;
+    min-width: 380px;
+  }
 }
 
 .sidebar {
   display: flex;
   flex-direction: column;
   row-gap: 50px;
-  margin-left: 30px;
+  @media screen and (min-width: 992px) {
+    margin-left: 30px;
+  }
 }
 
 .sidebarSearch {
