--- a/src/components/PostSlide/PostSlide.module.scss
+++ b/src/components/PostSlide/PostSlide.module.scss
@@ -2,6 +2,9 @@
   display: flex;
   position: relative;
   transition: all .2s linear;
+  &.active {
+    cursor: pointer;
+  }
 }
 
 .postSlide:hover {
@@ -21,7 +24,6 @@
   bottom: 40px;
   left: 40px;
   color: #fff;
-  cursor: pointer;
 }
 
 .topic {
@@ -31,16 +33,19 @@
   color: #f48840;
 }
 
+.postText a {
+  text-decoration: none;
+  color: #fff;
+}
+
 .title {
-  font-size: 24px;
+  font-size: 20px;
+  min-height: 48px;
   font-weight: 900;
   letter-spacing: 0.5px;
   text-transform: capitalize;
   margin: 10px 0 12px 0;
-  min-height: 48px;
-}
-
-.postInfo {
-  font-size: 14px;
-  font-weight: 500;
+  @media screen and (min-width: 1250px) {
+    font-size: 24px;
+  }
 }
