--- a/src/components/AboutContent/AboutContent.module.scss
+++ b/src/components/AboutContent/AboutContent.module.scss
@@ -5,9 +5,15 @@
 .content {
   display: flex;
   flex-direction: column;
-  padding: 100px 0;
+  padding: 40px 0;
   margin-left: -15px;
   margin-right: -15px;
+  @media screen and (min-width: 640px) {
+    padding: 60px 0;
+  }
+  @media screen and (min-width: 992px) {
+    padding: 100px 0;
+  }
 }
 
 .main {
@@ -36,18 +42,23 @@
     font-weight: 400;
     color: #7a7a7a;
     line-height: 30px;
+    @media screen and (min-width: 1440px) {
+      font-size: 18px;
+      line-height: 32px;
+    }
   }
 }
 
 .aboutSocials {
   display: flex;
   justify-content: center;
+  padding: 0 15px;
 }
 
 .socialList {
   display: flex;
   flex-direction: row;
-  column-gap: 12px;
+  column-gap: 15px;
   list-style-type: none;
 }
 
