--- a/src/components/AboutWelcome/AboutWelcome.module.scss
+++ b/src/components/AboutWelcome/AboutWelcome.module.scss
@@ -4,11 +4,17 @@
 }
 
 .welcomeBack {
-  padding: 120px 0;
+  padding: 60px 0;
   background-image: url('../../assets/images/heading-bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  @media screen and (min-width: 640px) {
+    padding: 80px 0;
+  }
+  @media screen and (min-width: 992px) {
+    padding: 120px 0;
+  }
 }
 
 .content {
