feat: add pagination to blog page

--- a/src/components/BlogContent/BlogContent.module.scss
+++ b/src/components/BlogContent/BlogContent.module.scss
@@ -11,15 +11,21 @@
   margin-right: -15px;
   @media screen and (min-width: 992px) {
     flex-direction: row;
+    justify-content: space-between;
   }
 }
 
 .mainColumn {
   display: flex;
+  flex-direction: column;
+  padding: 0 15px;
+}
+
+.posts {
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   column-gap: 30px;
-  padding: 0 15px;
 }
 
 .cardWrapper {
@@ -37,3 +43,20 @@
   }
 }
 
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.pagination li {
+  display: inline-block;
+  list-style: none;
+  cursor: pointer;
+}
+
+.paginationBtns {
+  display: flex;
+  flex-direction: row;
+  column-gap: 15px;
+}
