--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  position: fixed;
+  top: 0;
   width: 100%;
+  z-index: 100;
   background-color: #f7f7f7;
 }
 
@@ -26,8 +29,10 @@
   margin-top: -5px;
   white-space: nowrap;
   span {
-    font-size: 44px;
     color: #f48840;
+  }
+  span.dot {
+    font-size: 44px;
   }
 }
 
