--- a/src/components/PostCard/PostCard.module.scss
+++ b/src/components/PostCard/PostCard.module.scss
@@ -67,14 +67,7 @@
   padding-bottom: 25px;
   border-bottom: 1px solid #eee;
   border-top: 1px solid #eee;
-}
-
-.postDescription p {
-  font-size: 15px;
-  font-weight: 400;
-  color: #7a7a7a;
-  line-height: 30px;
-  &.shortened {
+  & div.shortened {
     display: -webkit-box;
     overflow: hidden;
     -webkit-box-orient: vertical;
@@ -82,6 +75,13 @@
     -webkit-line-clamp: 3;
     line-clamp: 3;
   }
+}
+
+.postDescription p {
+  font-size: 15px;
+  font-weight: 400;
+  color: #7a7a7a;
+  line-height: 30px;
 }
 
 .postTags div {
