--- a/src/components/BlogContent/BlogContent.module.scss
+++ b/src/components/BlogContent/BlogContent.module.scss
@@ -30,7 +30,13 @@
 
 .cardWrapper {
   display: block;
-  max-width: 350px;
+  max-width: auto;
+  @media screen and (min-width: 1200px) {
+    max-width: 350px;
+  }
+  @media screen and (min-width: 1440px) {
+    max-width: 420px;
+  }
 }
 
 .sideColumn {
@@ -39,7 +45,7 @@
   padding: 0 15px;
   @media screen and (min-width: 640px) {
     width: 380px;
-    min-width: 320px;
+    min-width: 380px;
   }
 }
 
