--- a/src/components/PostDetails/PostDetails.module.scss
+++ b/src/components/PostDetails/PostDetails.module.scss
@@ -22,5 +22,15 @@
 
 .date::after {
   margin-left: 8px;
-  content: "|";
+  content: "";
+  @media screen and (min-width: 480px) {
+    content: "|";
+  }
+}
+
+.comments {
+  display: none;
+  @media screen and (min-width: 480px) {
+    display: inline;
+  }
 }
