minor: edit PostArticle widescreen view

--- a/src/components/PostContent/PostContent.module.scss
+++ b/src/components/PostContent/PostContent.module.scss
@@ -18,6 +18,8 @@
 .mainColumn {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  align-items: center;
   justify-content: space-between;
   padding: 0 15px;
 }
