--- a/src/components/HomeContent/HomeContent.module.scss
+++ b/src/components/HomeContent/HomeContent.module.scss
@@ -18,6 +18,7 @@
 .mainColumn {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   padding: 0 15px;
 }
@@ -59,6 +60,12 @@
   font-size: 13px;
   font-weight: 500;
   transition: background .3s linear;
+  width: 100%;
+  @media screen and (min-width: 1920px) {
+    width: 580px;
+    font-size: 16px;
+    line-height: 68px;
+  }
   &:hover {
     background-color: #fb9857;
   }
