--- a/src/components/PostArticle/PostArticle.module.scss
+++ b/src/components/PostArticle/PostArticle.module.scss
@@ -8,6 +8,9 @@
   // &:hover {
   //   border-color: #f48840;
   // }
+  @media screen and (min-width: 1920px) {
+    max-width: 1000px;
+  }
   &:hover > .postImage {
     filter: opacity(70%);
   }
@@ -24,7 +27,11 @@
 }
 
 .postInfo {
+  width: 100%;
   padding: 40px;
+  @media screen and (min-width: 1920px) {
+    padding: 80px;
+  }
 }
 
 .postText {
@@ -74,8 +81,12 @@
   border-bottom: 1px solid #eee;
   border-top: 1px solid #eee;
   text-align: justify;
-  @media screen and (min-width: 1920px) {
-    max-width: 500px;
+  width: 100%;
+  & div {
+    @media screen and (min-width: 1920px) {
+      margin: 0 auto;
+      max-width: 788px;
+    }
   }
   & div>p {
     margin-bottom: 15px;
